--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,7 +69,7 @@ bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h -c "#{pane_current_path}"
 bind '"'        split-window -v -c "#{pane_current_path}"
-bind e          select-layout even-horizontal
+bind e          select-layout even-vertical
 # bind C-t        display-panes
 #bind C-t        select-layout main-vertical
 #bind t          run "tmux last-pane || tmux last-window || tmux new-window"
