--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ set -g default-terminal "screen-256color"
 set -g utf8 on
 set -sg escape-time 1
 # setw -g aggressive-resize on
+set -g renumber-windows on
 
 # Less stretching to get to the first item.
 set -g base-index 1
@@ -125,9 +126,9 @@ bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2
 
 
 # Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+# bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+# bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+# bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+# bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
