--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,7 @@ set -g renumber-windows on
 # Less stretching to get to the first item.
 set -g base-index 1
 setw -g pane-base-index 1
+set -g status-position top
 
 # Shut up.
 set -g quiet on
