--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,7 +71,8 @@ bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h -c "#{pane_current_path}"
 bind '"'        split-window -v -c "#{pane_current_path}"
-bind e          select-layout even-vertical
+# bind e          select-layout even-vertical
+bind e          select-layout even-horizontal
 # bind C-t        display-panes
 #bind C-t        select-layout main-vertical
 #bind t          run "tmux last-pane || tmux last-window || tmux new-window"
