--- a/.tmux.conf
+++ b/.tmux.conf
@@ -126,11 +126,5 @@ bind G send-keys "git pull" C-m
 #bind C run "tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
 bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/%1-console-$(date '+%Y%m%d%H%M%S').log\""
 
-
-# Smart pane switching with awareness of vim splits
-# is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-# bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-# bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-# bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-# bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+unbind s
+bind s split-window -c '#{pane_current_path}' -v "<<< $(tmux ls | peco --initial-index $(tmux list-sessions | awk '/(attached)/ {print NR-1}')) cut -d':' -f 1 | xargs tmux switch-client -t"
