--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,7 +111,7 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 ## Reload settings ##
-bind r source-file ~/.tmux.conf; display-message "config reloaded"
+bind r source-file ~/.tmux.conf\; display-message "config reloaded"
 bind S setw synchronize-panes
 #bind M set mode-mouse off
 
