--- a/.gitconfig
+++ b/.gitconfig
@@ -71,8 +71,7 @@
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [ghq]
-  root = ~/.ghq
-  root = ~/.go/src
+  root = ~/src
 [pager]
   log  = diff-highlight | less
   show = diff-highlight | less
