--- a/.tmux.conf
+++ b/.tmux.conf
@@ -128,4 +128,4 @@ bind G send-keys "git pull" C-m
 bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/%1-console-$(date '+%Y%m%d%H%M%S').log\""
 
 unbind s
-bind s split-window -c '#{pane_current_path}' -h "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
+bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
