--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,15 +22,6 @@ set -g status-position top
 set -g quiet on
 
 # DVTM style pane selection
-bind 1 select-pane -t 1
-bind 2 select-pane -t 2
-bind 3 select-pane -t 3
-bind 4 select-pane -t 4
-bind 5 select-pane -t 5
-bind 6 select-pane -t 6
-bind 7 select-pane -t 7
-bind 8 select-pane -t 8
-bind 9 select-pane -t 9
 bind -n F1 select-pane -t 1
 bind -n F2 select-pane -t 2
 bind -n F3 select-pane -t 3
@@ -52,10 +43,10 @@ bind N          new-window  -c "#{pane_current_path}"
 bind Down       kill-window
 bind X          kill-window
 bind M          kill-window
-bind -r C-h     resize-pane -L 5
-bind -r C-l     resize-pane -R 5
-bind -r C-j     resize-pane -D 5
-bind -r C-k     resize-pane -U 5
+bind -r C-h     resize-pane -L 6
+bind -r C-l     resize-pane -R 6
+bind -r C-j     resize-pane -D 6
+bind -r C-k     resize-pane -U 6
 
 ## Pane Controll ##
 bind -n C-down  kill-pane
@@ -119,11 +110,11 @@ bind S setw synchronize-panes
 ## Import local settings ##
 source-file ~/.tmux.conf.local
 
-bind D neww "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}')"
+bind D split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}')"
 
 ## Shortcutkey
 bind P send-keys 192.168.
-bind G send-keys "git pull" C-m
+# bind G send-keys "git pull" C-m
 #bind C run "tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
 bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/%1-console-$(date '+%Y%m%d%H%M%S').log\""
 
