--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,6 +95,7 @@ set -g default-command "reattach-to-user-namespace -l zsh"
 
 ## Edit mode ##
 set -g mode-keys vi
+bind V send-keys "tmux capture-pane -S -2000 && tmux show-buffer | sed '/^$/d' | vim -" C-m
 bind v copy-mode
 bind y paste-buffer
 unbind -t vi-copy Enter
