--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,8 +62,8 @@ bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h -c "#{pane_current_path}"
 bind '"'        split-window -v -c "#{pane_current_path}"
-# bind e          select-layout even-vertical
 bind e          select-layout even-horizontal
+bind E          select-layout even-vertical
 # bind e split-window -c '#{pane_current_path}' -v "<<< $(tmux ls | peco --initial-index $(tmux list-sessions | awk '/(attached)/ {print NR-1}')) cut -d':' -f 1 | xargs tmux switch-client -t"
 # bind C-t        display-panes
 #bind C-t        select-layout main-vertical
