--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,7 @@ bind E          select-layout even-vertical
 #bind C-t        select-layout main-vertical
 #bind t          run "tmux last-pane || tmux last-window || tmux new-window"
 bind t          select-layout main-vertical
+bind u          next-layout
 bind C-t        resize-pane -Z
 bind -n C-y     select-pane -t :.+
 
@@ -121,3 +122,7 @@ bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2
 
 unbind s
 bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
+
+
+bind-key -r C-n swap-pane -U
+bind-key -r C-p swap-pane -D
