--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,6 +72,9 @@ bind t          select-layout main-vertical
 bind u          next-layout
 bind C-t        resize-pane -Z
 bind -n C-y     select-pane -t :.+
+bind-key -r C-n swap-pane -D
+bind-key -r C-p swap-pane -U
+
 
 ## Views ##
 set -g status on
@@ -124,5 +127,3 @@ unbind s
 bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
 
 
-bind-key -r C-n swap-pane -U
-bind-key -r C-p swap-pane -D
