--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,12 +64,9 @@ bind |          split-window -h -c "#{pane_current_path}"
 bind '"'        split-window -v -c "#{pane_current_path}"
 bind e          select-layout even-horizontal
 bind E          select-layout even-vertical
-# bind e split-window -c '#{pane_current_path}' -v "<<< $(tmux ls | peco --initial-index $(tmux list-sessions | awk '/(attached)/ {print NR-1}')) cut -d':' -f 1 | xargs tmux switch-client -t"
-# bind C-t        display-panes
-#bind C-t        select-layout main-vertical
-#bind t          run "tmux last-pane || tmux last-window || tmux new-window"
-bind t          select-layout main-vertical
-bind u          next-layout
+# bind t          run "tmux last-pane || tmux last-window || tmux new-window"
+bind t          last-window
+bind u          select-layout main-vertical
 bind C-t        resize-pane -Z
 bind -n C-y     select-pane -t :.+
 bind-key -r C-n swap-pane -D
@@ -119,11 +116,9 @@ bind D split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{V
 
 ## Shortcutkey
 bind P send-keys 192.168.
-# bind G send-keys "git pull" C-m
+bind G send-keys "git fetch & git pull" C-m
 #bind C run "tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/console-$(date '+%Y%m%d%H%M%S').log"
 bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2000; tmux show-buffer >>#{pane_current_path}/%1-console-$(date '+%Y%m%d%H%M%S').log\""
 
 unbind s
 bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
-
-
