--- a/.peco/config.json
+++ b/.peco/config.json
@@ -1,5 +1,12 @@
 {
     "Keymap": {
         "C-j": "peco.Cancel"
+    },
+    "Style": {
+        "Basic": ["on_default", "default"],
+        "SavedSelection": ["bold", "on_yellow", "white"],
+        "Selected": ["underline", "on_cyan", "black"],
+        "Query": ["yellow", "bold"],
+        "Matched": ["red", "on_blue"]
     }
 }
