--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,7 @@ bind p          previous-window
 bind -n C-up    new-window -n "new"  -c "#{pane_current_path}"
 bind N          new-window  -c "#{pane_current_path}"
 bind Down       kill-window
-bind X          kill-window
+bind X          kill-session
 bind M          kill-window
 bind -r C-h     resize-pane -L 6
 bind -r C-l     resize-pane -R 6
