--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,11 +62,12 @@ bind k          select-pane -U
 bind l          select-pane -R
 bind |          split-window -h -c "#{pane_current_path}"
 bind '"'        split-window -v -c "#{pane_current_path}"
+# bind u          select-layout main-vertical
+bind u          select-layout even-horizontal
 bind e          select-layout even-horizontal
 bind E          select-layout even-vertical
 # bind t          run "tmux last-pane || tmux last-window || tmux new-window"
 bind t          last-window
-bind u          select-layout main-vertical
 bind C-t        resize-pane -Z
 bind -n C-y     select-pane -t :.+
 bind-key -r C-n swap-pane -D
