--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,10 +29,10 @@ bind -n F4 select-pane -t 4
 bind -n F5 select-pane -t 5
 bind -n F6 select-pane -t 6
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
-#set -g mode-mouse on
+set -g mode-mouse on
 #set -g mouse-resize-pane on
-#set -g mouse-select-pane on
-#set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 ## Window Controll ##
 bind -n C-right next-window
@@ -63,7 +63,7 @@ bind l          select-pane -R
 bind |          split-window -h -c "#{pane_current_path}"
 bind '"'        split-window -v -c "#{pane_current_path}"
 # bind u          select-layout main-vertical
-bind u          select-layout even-horizontal
+bind u          select-layout tiled
 bind e          select-layout even-horizontal
 bind E          select-layout even-vertical
 # bind t          run "tmux last-pane || tmux last-window || tmux new-window"
