--- a/.gitconfig
+++ b/.gitconfig
@@ -77,6 +77,10 @@
   show = diff-highlight | less
   diff = diff-highlight | less
 [filter "media"]
+	required = true
 	clean = git media clean %f
 	smudge = git media smudge %f
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
 	required = true
