--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,10 +29,10 @@ bind -n F4 select-pane -t 4
 bind -n F5 select-pane -t 5
 bind -n F6 select-pane -t 6
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
-set -g mode-mouse on
+# set -g mode-mouse on
 #set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
 
 ## Window Controll ##
 bind -n C-right next-window
