--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,8 +83,8 @@ set -g status-utf8 on
 set -g status-justify "centre"
 set -g status-left-length  90
 set -g status-right-length 90
-set -g status-left '#[fg=white,bg=black][#S]#[default]'
-set -g status-right '#[fg=white,bg=black] [%Y-%m-%d(%a) %H:%M]#[default]'
+set -g status-left '#[fg=white,bg=colour0][#S]#[default]'
+set -g status-right '#[fg=white,bg=colour0] [%Y/%m/%d(%a) %H:%M]#[default]'
 set -g window-status-current-attr bold
 set -g window-status-current-bg white
 set -g window-status-current-fg black
