--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,16 +29,17 @@ bind -n F4 select-pane -t 4
 bind -n F5 select-pane -t 5
 bind -n F6 select-pane -t 6
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
-# set -g mode-mouse on
-#set -g mouse-resize-pane on
-# set -g mouse-select-pane on
-# set -g mouse-select-window on
 
-## Window Controll ##
+## Window & Pane control
 bind -n C-right next-window
 bind -n C-left  previous-window
+bind -n C-down  select-pane -t :.+
+bind -n C-up    select-pane -t :.-
+
+
+## Window Controll ##
 bind p          previous-window
-bind -n C-up    new-window -n "new"  -c "#{pane_current_path}"
+# bind -n C-up    new-window -n "new"  -c "#{pane_current_path}"
 bind N          new-window  -c "#{pane_current_path}"
 bind Down       kill-window
 bind X          kill-session
@@ -123,3 +124,8 @@ bind C command-prompt -p "enter log prefix" "run-shell \"tmux capture-pane -S -2
 
 unbind s
 bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco | xargs tmux switch-client -t"
+
+
+## Rename
+# Preix $: Rename Session
+# Preix ,: Rename Window
