--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,7 @@ bind -r C-j     resize-pane -D 6
 bind -r C-k     resize-pane -U 6
 
 ## Pane Controll ##
-bind -n C-down  kill-pane
+# bind -n C-down  kill-pane
 bind m          kill-pane
 bind o          kill-pane -a -t .
 bind -n S-left  select-pane -L
