NeoVim compatible + C-o unite file_mru

--- a/.config/nvim/dein.toml
+++ b/.config/nvim/dein.toml
@@ -61,3 +61,7 @@ repo = 'Shougo/vimproc.vim'
   mac     = 'make -f make_mac.mak'
   linux   = 'make'
   unix    = 'gmake'
+
+
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
