--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,7 +93,7 @@ set -g pane-active-border-fg blue
 set -g pane-active-border-bg blue
 set -g pane-border-fg white
 set -g automatic-rename off
-set -g default-command "reattach-to-user-namespace -l zsh"
+set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
 
 
 ## Edit mode ##
@@ -112,7 +112,7 @@ bind S setw synchronize-panes
 #bind M set mode-mouse off
 
 ## Import local settings ##
-source-file ~/.tmux.conf.local
+# source-file ~/.tmux.conf.local
 
 bind D split-window -v "$(ps -ao pid,tty,args | sort | awk '$1 ~ /#{pane_pid}/{VAR=$2} $2 ~ VAR && $3 ~ /ssh/{$1=\"\"; $2=\"\"; print}')"
 
