--- a/.tmux.conf
+++ b/.tmux.conf
@@ -93,7 +93,7 @@ set -g pane-active-border-fg blue
 set -g pane-active-border-bg blue
 set -g pane-border-fg white
 set -g automatic-rename off
-set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
+#set -g default-command "tmux rename-window i; reattach-to-user-namespace -l zsh"
 
 
 ## Edit mode ##
