--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,12 +22,12 @@ setw -g pane-base-index 1
 set -g quiet on
 
 # DVTM style pane selection
-bind -n F1 select-pane -t 1
-bind -n F2 select-pane -t 2
-bind -n F3 select-pane -t 3
-bind -n F4 select-pane -t 4
-bind -n F5 select-pane -t 5
-bind -n F6 select-pane -t 6
+bind -n F1 select-window -t 1
+bind -n F2 select-window -t 2
+bind -n F3 select-window -t 3
+bind -n F4 select-window -t 4
+bind -n F5 select-window -t 5
+bind -n F6 select-window -t 6
 bind > run-shell "tmux rename-window `basename #{pane_current_path}`"
 
 ## Window & Pane control
@@ -129,3 +129,11 @@ bind s split-window -c '#{pane_current_path}' -v "tmux ls | cut -d: -f1 | peco |
 ## Rename
 # Preix $: Rename Session
 # Preix ,: Rename Window
+
+# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+#  bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+# bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+# bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+# bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
